# backon

./: AGENTS.md  Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
backon/: Cargo.toml
backon-macros/: Cargo.toml  README.md
backon-macros/examples/: async_fn.rs  blocking_fn.rs  method_self.rs
backon-macros/src/: lib.rs
backon-macros/tests/: trybuild.rs
backon-macros/tests/cases/: fail_adjust_blocking.rs  fail_adjust_blocking.stderr  fail_context_ident.rs  fail_context_ident.stderr  fail_context_value_self.rs  fail_context_value_self.stderr  fail_method_mut_context.rs  fail_method_mut_context.stderr  fail_method_self_context.rs  fail_method_self_context.stderr  pass_async.rs  pass_context.rs  pass_method_self.rs  pass_sync.rs
backon/src/: blocking_retry.rs  blocking_retry_with_context.rs  lib.rs  retry.rs  retry_core.rs  retry_with_context.rs
